[package]
name = "rust-dust-http"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.8"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
axum-test = "17.2.0"
serde = { version = "1.0.199", features = ["derive"]}
http = "1.2.0"
tokio-postgres = "0.7.13"
futures = "0.3.31"